<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@android:color/white">
  <LinearLayout
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:padding="10dp"
  android:background="@drawable/titlebackground">
  		<TextView android:text="@string/noteTitle"
  				  android:paddingRight="10dp"
  				  android:textSize="18sp"
		  		  android:layout_height="wrap_content"
		  		  android:layout_width="wrap_content"/>
		  		  <EditText android:id="@+id/noteTitleText"
				  			android:hint="@string/noteTitleHint"
				  			android:background="@null"
				  			android:textColor="@android:color/white"
				  			android:singleLine="true"
				  			android:layout_height="wrap_content"
				  			android:layout_width="fill_parent"/>
  </LinearLayout>
  <TextView android:text="@string/noteBody"
  			android:textColor="@android:color/darker_gray"
  			android:textSize="18sp"
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content"/>
  <EditText android:id="@+id/noteBodyText"
  			android:hint="@string/noteBodyHint"
  			android:background="@null"
  			android:gravity="top"
  			android:layout_height="wrap_content"
  			android:layout_width="fill_parent"
  			android:layout_weight="1" />
  <TextView android:text="@string/notePlace"
  			android:textColor="@android:color/darker_gray"
  			android:textSize="18sp"
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content"/>
</LinearLayout>
