<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@android:color/white">
  <TextView android:id="@+id/noteViewTitleText"
  			android:singleLine="true"
  			android:textSize="18sp"
  			android:background="@drawable/titlebackground"
  			android:textColor="@android:color/background_light"
  			android:padding="10dp"
  			android:layout_height="wrap_content"
  			android:layout_width="fill_parent"
  			android:layout_gravity="center_vertical|center_horizontal"/>
  <TextView android:text="@string/noteBody"
  			android:textColor="@android:color/darker_gray"
  			android:textSize="18sp"
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content"/>
  			
  <ScrollView android:layout_width="fill_parent"
  			  android:layout_height="wrap_content"
  			  android:layout_weight="1">
	  		  <TextView android:id="@+id/noteViewBodyText"
			  			android:gravity="top"
			  			android:textColor="@android:color/black"
			  			android:textSize="18sp"
			  			android:layout_height="wrap_content"
			  			android:layout_width="fill_parent"
			  			android:layout_weight="1" />
  </ScrollView>
  
  <TextView android:text="@string/notePlace"
  			android:textColor="@android:color/darker_gray"
  			android:textSize="18sp"
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content"/>
  <Button 	android:id="@+id/noteShowMapButton"
	  		android:layout_gravity="bottom|center_horizontal"
	  		android:layout_height="wrap_content"
	  		android:layout_width="fill_parent"
	  		android:text="@string/noteShowMap" />
</LinearLayout>
